// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / Number Default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      value = 1000
    </div>
    <div>
      
      1,000
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      value = 9000000
    </div>
    <div>
      
      9,000,000
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      value = 0.01
    </div>
    <div>
      
      0.01
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      value = 111.2
    </div>
    <div>
      
      111.2
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / Number Integration: with different typographies 1`] = `
.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 10px;
  line-height: 1.6;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 24px;
  line-height: 1.1666666666666667;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 46px;
  line-height: 1.0434782608695652;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:760px) {
  .c7 {
    font-size: 28px;
    line-height: 1.1428571428571428;
  }
}

@media (min-width:760px) {
  .c8 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:760px) {
  .c9 {
    font-size: 20px;
    line-height: 1.2;
  }
}

@media (min-width:760px) {
  .c10 {
    font-size: 48px;
    line-height: 1.0833333333333333;
  }
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      primary
    </div>
    <div>
      <span
        className="c3"
      >
        <div
          className="c0"
          direction="column"
        >
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 1000
            </div>
            <div>
              
              1,000
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 9000000
            </div>
            <div>
              
              9,000,000
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 0.01
            </div>
            <div>
              
              0.01
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 111.2
            </div>
            <div>
              
              111.2
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      secondary
    </div>
    <div>
      <span
        className="c4"
      >
        <div
          className="c0"
          direction="column"
        >
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 1000
            </div>
            <div>
              
              1,000
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 9000000
            </div>
            <div>
              
              9,000,000
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 0.01
            </div>
            <div>
              
              0.01
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 111.2
            </div>
            <div>
              
              111.2
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      tertiary
    </div>
    <div>
      <span
        className="c5"
      >
        <div
          className="c0"
          direction="column"
        >
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 1000
            </div>
            <div>
              
              1,000
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 9000000
            </div>
            <div>
              
              9,000,000
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 0.01
            </div>
            <div>
              
              0.01
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 111.2
            </div>
            <div>
              
              111.2
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      caption
    </div>
    <div>
      <span
        className="c6"
      >
        <div
          className="c0"
          direction="column"
        >
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 1000
            </div>
            <div>
              
              1,000
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 9000000
            </div>
            <div>
              
              9,000,000
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 0.01
            </div>
            <div>
              
              0.01
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 111.2
            </div>
            <div>
              
              111.2
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      title1
    </div>
    <div>
      <span
        className="c7"
      >
        <div
          className="c0"
          direction="column"
        >
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 1000
            </div>
            <div>
              
              1,000
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 9000000
            </div>
            <div>
              
              9,000,000
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 0.01
            </div>
            <div>
              
              0.01
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 111.2
            </div>
            <div>
              
              111.2
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      title2
    </div>
    <div>
      <span
        className="c8"
      >
        <div
          className="c0"
          direction="column"
        >
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 1000
            </div>
            <div>
              
              1,000
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 9000000
            </div>
            <div>
              
              9,000,000
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 0.01
            </div>
            <div>
              
              0.01
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 111.2
            </div>
            <div>
              
              111.2
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      title3
    </div>
    <div>
      <span
        className="c9"
      >
        <div
          className="c0"
          direction="column"
        >
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 1000
            </div>
            <div>
              
              1,000
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 9000000
            </div>
            <div>
              
              9,000,000
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 0.01
            </div>
            <div>
              
              0.01
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 111.2
            </div>
            <div>
              
              111.2
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      hero
    </div>
    <div>
      <span
        className="c10"
      >
        <div
          className="c0"
          direction="column"
        >
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 1000
            </div>
            <div>
              
              1,000
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 9000000
            </div>
            <div>
              
              9,000,000
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 0.01
            </div>
            <div>
              
              0.01
            </div>
          </div>
          <div
            className="c1"
            direction="row"
          >
            <div
              className="c2"
            >
              value = 111.2
            </div>
            <div>
              
              111.2
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / Number Invalid value 1`] = `"-"`;

exports[`Storyshots Molecules / Number Number ticks 1`] = `
Array [
  <pre>
    ticks = [
  {
    "decimals": 4,
    "fromPrice": 0,
    "toPrice": 0.9999,
    "tick": 0.0001
  },
  {
    "decimals": 2,
    "fromPrice": 1,
    "toPrice": 99999.98,
    "tick": 0.01
  },
  {
    "decimals": 1,
    "fromPrice": 100000,
    "toPrice": 999999.89,
    "tick": 0.1
  }
]
  </pre>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    className="c0"
    direction="column"
  >
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        value = 0.55555
      </div>
      <div>
        
        0.5556
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        value = 10.333
      </div>
      <div>
        
        10.33
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        value = 10.5
      </div>
      <div>
        
        10.50
      </div>
    </div>
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        value = 100001.22
      </div>
      <div>
        
        100,001.2
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Molecules / Number Number with 2 decimals  1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      value = 10.378
    </div>
    <div>
      
      10.38
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      value = 10.333
    </div>
    <div>
      
      10.33
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      value = 10
    </div>
    <div>
      
      10.00
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      value = 10.5
    </div>
    <div>
      
      10.50
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / Number Number with currency 1`] = `
Array [
  "",
  "2.3",
  " SEK",
]
`;

exports[`Storyshots Molecules / Number Number with currency as different size 1`] = `
Array [
  .c1 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c3 {
  font-weight: inherit;
}

@media (min-width:760px) {
  .c0 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:760px) {
  .c2 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      
      2.3
       SEK
    </div>
    <span
      aria-hidden={true}
    >
      
      2.3
       
      <span
        className="c2 c3"
      >
        SEK
      </span>
    </span>
  </div>,
  .c1 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c0 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-weight: inherit;
}

@media (min-width:760px) {

}

@media (min-width:760px) {

}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      
      2.3
       SEK
    </div>
    <span
      aria-hidden={true}
    >
      
      2.3
       
      <span
        className="c2 c3"
      >
        SEK
      </span>
    </span>
  </div>,
]
`;

exports[`Storyshots Molecules / Number Number with min/max digits 1`] = `
Array [
  "",
  "10.38",
  "",
  "10.10",
  "",
  "10.333",
  "",
  "10.10",
  "",
  "10.6667",
  "",
  "10.00",
]
`;

exports[`Storyshots Molecules / Number Number with percentage 1`] = `
Array [
  "",
  "2.3",
  "%",
]
`;

exports[`Storyshots Molecules / Number Number with sign 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      value = 2
    </div>
    <div>
      +
      2
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      value = 0
    </div>
    <div>
      
      0
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      value = -1
    </div>
    <div>
      
      -1
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / Number Regression: -0 should be 0 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    className="c0"
    direction="column"
  >
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        value = 0.1
      </div>
      <div>
        
        0
      </div>
    </div>
  </div>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
    className="c0"
    direction="column"
  >
    <div
      className="c1"
      direction="row"
    >
      <div
        className="c2"
      >
        value = 0.1
      </div>
      <div>
        
        0
      </div>
    </div>
  </div>,
  ",",
]
`;

exports[`Storyshots Molecules / Number Regression: value is positive, but rounded value is 0 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      value = 0.1
    </div>
    <div>
      
      0
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / Number null currency 1`] = `"-"`;
